[workspace]
members = ["libs", "cli", "platform", "mosh", "terminal", "emulator"]

[package]
name = "termio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tmui = { git = "https://github.com/toocol/tmui" }

libs = { path = "libs/" }
cli = { path = "cli/" }
platform = { path = "platform/" }

log = "0.4"
log4rs = "1.1.1"