[workspace]
members = ["libs", "cli", "platform", "mosh", "terminal", "emulator", "asset"]

[package]
name = "termio"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
tmui = { git = "https://github.com/toocol/tmui", features = []}

log = "0.4"
log4rs = "1.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
ssh2 = "0.9.3"
parking_lot = "0.12.1"
encoding = "0.2.33"
pem = "1.1.0"
hex_color = "2.0.0"
page_size = "0.5.0"
libc = "0.2.138"
wchar = "0.11.0"
widestring = "1.0.2"
bitvec = "1.0.1"
regex = "1.7.0"
hex = "0.4.3"
derivative = "2.2.0"
once_cell = "1.17.0"
unicode-width = "0.1.10"
rust-embed = { version = "8.3.0", features = [
    "debug-embed",
    "include-exclude",
] }
aes = "0.8.2"
cipher = { version = "0.4.3", features = ["block-padding"] }
base64 = "0.13.1"
rand = "0.8.5"
protobuf = "3.2.0"
flate2 = { version = "1.0.25", features = ["zlib-ng"] }
local_ipaddress = "0.1.3"
terminal_size = "0.2.3"
chrono = "0.4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tmui = { workspace = true }

libs = { path = "libs/" }
cli = { path = "cli/" }
platform = { path = "platform/" }

log = { workspace = true }
log4rs = { workspace = true }
