[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[features]
default = []
x11 = ["tmui/x11"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tmui = { git = "https://github.com/toocol/tmui" }
libs = { path = "../libs" }

lazy_static = { workspace = true }
log = { workspace = true }
ssh2 = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust-embed = { workspace = true }
ahash = { workspace = true }
getset = { workspace = true }
