[package]
name = "emulator"
version = "0.1.0"
edition = "2021"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tmui = { git = "https://github.com/toocol/tmui" }
cli = { path = "../cli/" }

lazy_static = { workspace = true }
page_size = { workspace = true }
log = { workspace = true }
libc = { workspace = true }
wchar = { workspace = true }
widestring = { workspace = true }
bitvec = { workspace = true }
regex = { workspace = true }
hex = { workspace = true }
derivative = { workspace = true }
once_cell = { workspace = true }
unicode-width = { workspace = true }
rust-embed = { workspace = true }
strip-ansi-escapes = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
winpty-rs = "0.3.11"

[target.'cfg(not(target_os = "windows"))'.dependencies]
pty = "0.2.2"
termios = "0.3.3"

[dev-dependencies]
criterion = "0.4.0"
