[package]
name = "libs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
asset = {path = "../asset/"}

java-properties = "1.4.1"
lazy_static = { workspace = true }
log = { workspace = true }
encoding = { workspace = true }
pem = { workspace = true }
hex_color = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
