[package]
name = "mosh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libs = { path = "../libs" }

aes = { workspace = true }
cipher = { workspace = true }
once_cell = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
protobuf = { workspace = true }
ssh2 = { workspace = true }
flate2 = { workspace = true }
log = { workspace = true }
log4rs = { workspace = true }
local_ipaddress = { workspace = true }
terminal_size = { workspace = true }

libz-ng-sys = "=1.1.16"

[build-dependencies]
protoc-bin-vendored = "3.0.0"
protobuf-codegen = "3.2.0"

[[bin]]
name = "mosh"
path = "src/main.rs"
