[package]
name = "platform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tmui = { workspace = true }

asset = { path = "../asset/" }
emulator = { path = "../emulator/" }
cli = { path = "../cli/" }

log = { workspace = true }