[package]
name = "platform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
x11 = ["tmui/x11"]

[dependencies]
tmui = { git = "https://github.com/toocol/tmui" }

asset = { path = "../asset/" }
emulator = { path = "../emulator/" }
cli = { path = "../cli/" }

log = { workspace = true }