[package]
name = "terminal"
version = "0.1.0"
edition = "2021"

[dependencies]
tmui = { git = "https://github.com/toocol/tmui" }

cli = { path = "../cli/" }
emulator = { path = "../emulator/" }
asset = { path = "../asset/" }

log4rs = "1.1.1"

[profile.release]
lto = "fat"
codegen-units = 1
